<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="next_button_text">Next</string>
    <string name="previous_button_text">Previous</string>
    <string name="false_button_text">False</string>
    <string name="true_button_text">True</string>
    <string name="question_text_view_text">What was the Question again?</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="question_1">Update Question One!</string>
    <string name="question_2">Update Question 2</string>
    <string name="question_3">Update Question 3</string>
    <string name="question_4">Update Question 4</string>
    <string name="question_5">Update Question 5</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="cheat_button_text">Cheat!</string>
    <string name="show_answer_button">Show the answer.</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="subtitle_text">This is a subtitle</string>
</resources>
